--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -9,7 +9,8 @@
 3、更加深刻理解了查理芒格所说的能力圈的意义。  
 “这同样是一个非常非常有用的道理。每个人都有他的能力圈。要扩大那个能力圈是非常困难的。如果我不得不靠当音乐家来谋生……假设音乐是衡量文明的标准，那么我不知道必须把标准降到多低，我才能够有演出的机会。  
 所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
-
+4、读完第一遍《流畅的Python》  
+5、  
 
 
 
@@ -24,14 +25,19 @@
 
 
 #### 生活方面
-1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；寿命，复利；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦。  
+1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；寿命，复利；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。  
+、早上醒了就起来。多躺半小时，耽误一天；躺着效率很低；起来可以吃饭，效率要高得多；可能会又睡着了，打乱作息，耽误上百个小时；自我认同，自我成就感，否则很沮丧；  
 2、买水果。不买水果，就要买药  
-、早刷牙是关键。早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡  
+、早刷牙是关键。早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡；刷牙，牙疼起来非常痛苦。    
 、做眼保健操。很容易；戴眼镜，摘眼镜，会给生活带来很大的不方便，各种生活的场景都会不方便，一年几千次，一辈子几十万次；  
+、
 
+
+#### 读书写作学习
 3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
-4、  
-5、  
+4、读技术书，看技术视频之前先花点时间做检视阅读，看了一般的就没时间看最好的了；投入百分之一的时间挑选，可以有百倍的效果上的差距      
+5、写经典的写最好的。不要凑数量，质量不好写再多也没用，反而是有害的，从所有的方面来说都是有害的，自己、读的人、自己的读书，自己的生活都是有害的；质量好几篇就够了；写了不好的就没有精力写最好的了，最后就是一个平庸的结果；写得好一年几篇就够；  
+、
 
 
 
