--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -35,7 +35,7 @@
 
 #### 读书写作学习
 3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
-4、读技术书，看技术视频之前先花点时间做检视阅读，看了一般的就没时间看最好的了；投入百分之一的时间挑选，可以有百倍的效果上的差距      
+4、读技术书，看技术视频之前先花点时间做检视阅读，看了一般的就没时间看最好的了；投入百分之一的时间挑选，天壤之别；不好的书越读越迷惑，贻害无穷；好书：《流畅的 Python》、《HTTP权威指南》、不好的书《图解HTTP》、    
 5、写经典的写最好的。不要凑数量，质量不好写再多也没用，反而是有害的，从所有的方面来说都是有害的，自己、读的人、自己的读书，自己的生活都是有害的；质量好几篇就够了；写了不好的就没有精力写最好的了，最后就是一个平庸的结果；写得好一年几篇就够；  
 、
 
@@ -47,6 +47,7 @@
 3、要是不看这些，早就成功照到了  
 4、不听流行音乐。错失了至美的享受，生活可能因此而暗淡许多；听流行歌曲，越听越焦躁，严重影响心情，影响工作效率，经典的古典音乐越听越愉快，越听效率越高；古典音乐越听越厚，百听不厌，流行音乐越听越薄；错失了了解艺术的机会；错失了和有很高艺术修养的人认识交流的机会，错失了认识交流的机会，失去了生活的一个极为重要的方面；错过了莫扎特、贝多芬、  
 5、除了早起睡前段时间，不要躺着看书。颈椎病会非常痛苦，会耽误时间，会影响人的状态，和工作的效率；影响形象，形象是反复使用的，驼背了就改不过来了；  
+第一天就读了 8 个小时，是这两年最高的记录  
 6、  
 
 
