--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -15,6 +15,8 @@
 
 
 ## 永远考虑机会成本  
+可以一直处在最优的状态  
+
 ### 应该做的
 成为一个优秀的人。可以有非常精彩的人生，可以做成许多伟大的事，可以认识许多伟大的人，可以结识很优秀的人，人生质量将会完全不一样。
 多读书  
@@ -34,10 +36,11 @@
 
 
 #### 读书写作学习
-3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
+3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的；有些后怕，如果没有读过这些经典，我就不是现在这样了；  
 4、读技术书，看技术视频之前先花点时间做检视阅读，看了一般的就没时间看最好的了；投入百分之一的时间挑选，天壤之别；不好的书越读越迷惑，贻害无穷；查豆瓣评分(也不可尽信，豆瓣厚书评分高，不见得就是自己需要的)，搜微信读书，搜 kindle，百度搜 PDF，Google 搜 PDF；好书：《流畅的 Python》、《HTTP权威指南》、不好的书《图解HTTP》、    
 5、写经典的写最好的。不要凑数量，质量不好写再多也没用，反而是有害的，从所有的方面来说都是有害的，自己、读的人、自己的读书，自己的生活都是有害的；质量好几篇就够了；写了不好的就没有精力写最好的了，最后就是一个平庸的结果；写得好一年几篇就够；  
-、
+、读书速度要快。详略得当，需要精度的精读，需要略读的略读，速度提高 5 倍以上，效果也更好；等同视之就是都不重要  
+
 
 
 
