--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -31,14 +31,14 @@
 肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；寿命，复利；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。  
 ##### 、早上醒了就起来。  
 多躺半小时，耽误一天；躺着效率很低；起来可以吃饭，效率要高得多；可能会又睡着了，打乱作息，耽误上百个小时；自我认同，自我成就感，否则很沮丧；  
+##### 5、除了早起睡前段时间，不要躺着看书。  
+颈椎病会非常痛苦，会耽误时间，会影响人的状态，和工作的效率；影响形象，形象是反复使用的，驼背了就改不过来了；  
 ##### 2、买水果。  
 不买水果，就要买药  
 ##### 、早刷牙是关键。  
 早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡；刷牙，牙疼起来非常痛苦。    
 ##### 、做眼保健操。  
 很容易；戴眼镜，摘眼镜，会给生活带来很大的不方便，各种生活的场景都会不方便，一年几千次，一辈子几十万次；  
-##### 5、除了早起睡前段时间，不要躺着看书。  
-颈椎病会非常痛苦，会耽误时间，会影响人的状态，和工作的效率；影响形象，形象是反复使用的，驼背了就改不过来了；  
 、
 
 
@@ -57,14 +57,15 @@
 
 ### 要注意的  
 ##### 1、不刷微博。  
-不刷微博就有了读书和写文章的时间了；没用，耽误了读书读经典的时间；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
+没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
 ##### 2、不要熬夜看电影。  
 影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
-3、要是不看这些，早就成功照到了  
+3、要是不看这些，早就成功了；把现实中真的看没了，这就是代价；会生病；  
 ##### 4、不听流行音乐。  
 错失了至美的享受，生活可能因此而暗淡许多；听流行歌曲，越听越焦躁，严重影响心情，影响工作效率，经典的古典音乐越听越愉快，越听效率越高；古典音乐越听越厚，百听不厌，流行音乐越听越薄；错失了了解艺术的机会；错失了和有很高艺术修养的人认识交流的机会，错失了认识交流的机会，失去了生活的一个极为重要的方面；错过了莫扎特、贝多芬、  
-
 ##### 6、  
+
+
 
 
 
