--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -10,7 +10,10 @@
 “这同样是一个非常非常有用的道理。每个人都有他的能力圈。要扩大那个能力圈是非常困难的。如果我不得不靠当音乐家来谋生……假设音乐是衡量文明的标准，那么我不知道必须把标准降到多低，我才能够有演出的机会。  
 所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
 4、读完第一遍《流畅的Python》  
-5、  
+5、找到了一个新的学习方法，可以用微信读书的听书功能来读书，比自己读书要快得多，至少提高 5 倍，可以读技术书，可以读自己一直读不下去的书；前景广阔  
+6、学完《Django rest 框架》课程  
+7、读完《HTTP 权威指南》  
+8、
 
 
 
