--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -1,6 +1,6 @@
 
 ## 已完成
-只关注当前这 5 分钟任务，不要想还剩多少，消除主观疲劳。  
+只关注当下的任务，不要想还剩多少，消除主观疲劳。  
 
 ### 2021.02 
 
@@ -74,7 +74,7 @@
 
 正事：休息、运动、读经典、编程、写作、建网站、学人工智能、学物理、学工业工程  
 想读的书：欧几里得、达尔文、  
-编程：Python 进阶、http、Linux、Shell、Django、Flask、算法、  
+编程：Python 进阶、http、Linux、Shell、Django、Flask、算法、go、JavaScript、  
 睡前早起读几页书  
 
 
