--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -30,26 +30,26 @@
 
 
 #### 生活方面
-##### 1、早起早睡锻炼身体。  
+##### 早起早睡锻炼身体。  
 肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；寿命，复利；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。  
-##### 、早上醒了就起来。  
+##### 早上醒了就起来。  
 多躺半小时，耽误一天；躺着效率很低；起来可以吃饭，效率要高得多；可能会又睡着了，打乱作息，耽误上百个小时；自我认同，自我成就感，否则很沮丧；  
-##### 5、除了早起睡前段时间，不要躺着看书。  
+##### 除了早起睡前段时间，不要躺着看书。  
 颈椎病会非常痛苦，会耽误时间，会影响人的状态，和工作的效率；影响形象，形象是反复使用的，驼背了就改不过来了；  
-##### 2、买水果。  
+##### 买水果。  
 不买水果，就要买药  
-##### 、早刷牙是关键。  
+##### 早刷牙是关键。  
 早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡；刷牙，牙疼起来非常痛苦。    
-##### 、做眼保健操。  
+##### 做眼保健操。  
 很容易；戴眼镜，摘眼镜，会给生活带来很大的不方便，各种生活的场景都会不方便，一年几千次，一辈子几十万次；  
 、
 
 
 #### 读书写作学习
-##### 3、读经典。  
+##### 读经典。  
 读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的；有些后怕，如果没有读过这些经典，我就不是现在这样了；  
-##### 4、读技术书，看技术视频之前先花点时间做检视阅读。  
-看了一般的就没时间看最好的了；投入百分之一的时间挑选，天壤之别；不好的书越读越迷惑，贻害无穷；查豆瓣评分(也不可尽信，豆瓣厚书评分高，不见得就是自己需要的)，搜微信读书，搜 kindle，百度搜 PDF，Google 搜 PDF；好书：《流畅的 Python》、《HTTP权威指南》、不好的书《图解HTTP》、    
+##### 读技术书，看技术视频之前先花点时间做检视阅读。  
+看了一般的就没时间看最好的了；投入百分之一的时间挑选，天壤之别；不好的书越读越迷惑，贻害无穷；查豆瓣评分(也不可尽信，豆瓣厚书评分高，不见得就是自己需要的)，搜微信读书，搜 kindle，用 Google 搜 PDF(垃圾百度)；好书：《流畅的 Python》、《HTTP权威指南》、不好的书《图解HTTP》、    
 ##### 5、写经典的写最好的。  
 不要凑数量，质量不好写再多也没用，反而是有害的，从所有的方面来说都是有害的，自己、读的人、自己的读书，自己的生活都是有害的；质量好几篇就够了；写了不好的就没有精力写最好的了，最后就是一个平庸的结果；写得好一年几篇就够；  
 ##### 、读不重要的书速度要快。  
@@ -59,12 +59,13 @@
 
 
 ### 要注意的  
-##### 1、不刷微博。  
+##### 不刷微博。  
+想刷微博就听 20 分钟书，成为本能反应  
 没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
-##### 2、不要熬夜看电影。  
+##### 不要熬夜看电影。  
 影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
-3、要是不看这些，早就成功了；把现实中真的看没了，这就是代价；会生病；  
-##### 4、不听流行音乐。  
+##### 要是不看这些，早就成功了；并不想看；把现实中真的看没了，这就是代价；把一生看没了；会生病；  
+##### 不听流行音乐。  
 错失了至美的享受，生活可能因此而暗淡许多；听流行歌曲，越听越焦躁，严重影响心情，影响工作效率，经典的古典音乐越听越愉快，越听效率越高；古典音乐越听越厚，百听不厌，流行音乐越听越薄；错失了了解艺术的机会；错失了和有很高艺术修养的人认识交流的机会，错失了认识交流的机会，失去了生活的一个极为重要的方面；错过了莫扎特、贝多芬、  
 ##### 6、  
 
