--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -16,17 +16,40 @@
 8、
 
 
-
 ## 永远考虑机会成本  
 可以一直处在最优的状态  
 
+### 要注意的  
+##### 不刷微博。不管有多大的新闻
+想刷微博就听 20 分钟书，成为本能反应  
+没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
+##### 不要熬夜看电影。  
+影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
+##### 要是不看这些，早就成功了；并不想看；把现实中真的看没了，这就是代价；把一生看没了；splendid future 没了；作息不好会生病；  
+##### 不听流行音乐。  
+错失了至美的享受，生活可能因此而暗淡许多；听流行歌曲，越听越焦躁，严重影响心情，影响工作效率，经典的古典音乐越听越愉快，越听效率越高；古典音乐越听越厚，百听不厌，流行音乐越听越薄；错失了了解艺术的机会；错失了和有很高艺术修养的人认识交流的机会，错失了认识交流的机会，失去了生活的一个极为重要的方面；错过了莫扎特、贝多芬、  
+#####   
+
+
+
+正事：休息、运动、读经典、编程、写作、建网站、学人工智能、学物理、学工业工程  
+想读的书：欧几里得、达尔文、  
+编程：Python 进阶、http、Linux、Shell、Django、Flask、算法、go、JavaScript、  
+睡前早起读几页书  
+
+
+
+
+
 ### 应该做的
-成为一个优秀的人。可以有非常精彩的人生，可以做成许多伟大的事，可以认识许多伟大的人，可以结识很优秀的人，人生质量将会完全不一样。
+##### 成为一个优秀的人。可以有非常精彩的人生，可以做成许多伟大的事，可以认识许多伟大的人，可以结识很优秀的人，人生质量将会完全不一样。
 多读书  
 执行力  
 好习惯  
-、永不放弃。想放弃的时候，要想到机会成本，想到因为缺失一点的努力造成的巨大的损失    
-、工业工程还是要读，还是要用。是贯穿始终和机会成本重叠的超级威力；影响每一天的每一件事；一生效果相差百万倍  
+##### 永不放弃。
+想放弃的时候，要想到机会成本，想到因为缺失一点的努力造成的巨大的损失    
+##### 工业工程还是要读，还是要用。
+是贯穿始终和机会成本重叠的超级威力；影响每一天的每一件事；一生效果相差百万倍  
 
 
 #### 生活方面
@@ -42,7 +65,7 @@
 早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡；刷牙，牙疼起来非常痛苦。    
 ##### 做眼保健操。  
 很容易；戴眼镜，摘眼镜，会给生活带来很大的不方便，各种生活的场景都会不方便，一年几千次，一辈子几十万次；  
-、
+
 
 
 #### 读书写作学习
@@ -57,26 +80,6 @@
 
 
 
-
-### 要注意的  
-##### 不刷微博。  
-想刷微博就听 20 分钟书，成为本能反应  
-没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
-##### 不要熬夜看电影。  
-影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
-##### 要是不看这些，早就成功了；并不想看；把现实中真的看没了，这就是代价；把一生看没了；会生病；  
-##### 不听流行音乐。  
-错失了至美的享受，生活可能因此而暗淡许多；听流行歌曲，越听越焦躁，严重影响心情，影响工作效率，经典的古典音乐越听越愉快，越听效率越高；古典音乐越听越厚，百听不厌，流行音乐越听越薄；错失了了解艺术的机会；错失了和有很高艺术修养的人认识交流的机会，错失了认识交流的机会，失去了生活的一个极为重要的方面；错过了莫扎特、贝多芬、  
-##### 6、  
-
-
-
-
-
-正事：休息、运动、读经典、编程、写作、建网站、学人工智能、学物理、学工业工程  
-想读的书：欧几里得、达尔文、  
-编程：Python 进阶、http、Linux、Shell、Django、Flask、算法、go、JavaScript、  
-睡前早起读几页书  
 
 
 链接一个月更新一次  
