--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -13,7 +13,7 @@
 5、找到了一个新的学习方法，可以用微信读书的听书功能来读书，比自己读书要快得多，至少提高 5 倍，可以读技术书，可以读自己一直读不下去的书，可以复习读过的书；可以读完所有想读的书  
 6、学完《Django rest 框架》课程  
 7、读完《HTTP 权威指南》  
-8、
+8、通宵完成了 Django 网站的部署。三年以来，第一个真正意义上的成功；工作有着落了；完成了困扰了三年夙愿；  
 
 
 ## 永远考虑机会成本  
