--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -14,6 +14,9 @@
 6、学完《Django rest 框架》课程  
 7、读完《HTTP 权威指南》  
 8、通宵完成了 Django 网站的部署。三年以来，第一个真正意义上的成功；工作有着落了；完成了困扰了三年夙愿；  
+9、重新从头建了一遍网站  
+10、使用 pysnooper 快速查找到了 bug，很快就解决了，没有用搜索引擎；在报错的最下面的文件中使用 pysnooper  
+11、
 
 
 ## 永远考虑机会成本  
