--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -7,6 +7,26 @@
 
 写一辈子，每个月总结，每个月报告  
 
+
+### 2021.02 
+
+1、读完《Django 开发实战》  
+2、这个星期有两个任务，一个是读完《Django》，读书时长要达到 42 小时以上，下周读《流畅的 Python》；第二个任务是写完这篇文章，一天通读 3 遍，一点一点补充，一点一点修改，这一篇会是代表作。    
+3、更加深刻理解了查理芒格所说的能力圈的意义。  
+“这同样是一个非常非常有用的道理。每个人都有他的能力圈。要扩大那个能力圈是非常困难的。如果我不得不靠当音乐家来谋生……假设音乐是衡量文明的标准，那么我不知道必须把标准降到多低，我才能够有演出的机会。  
+所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
+4、读完第一遍《流畅的Python》  
+5、找到了一个新的学习方法，可以用微信读书的听书功能来读书，比自己读书要快得多，至少提高 5 倍，可以读技术书，可以读自己一直读不下去的书，可以复习读过的书；可以读完所有想读的书  
+6、学完《Django rest 框架》课程  
+7、读完《HTTP 权威指南》  
+8、通宵完成了 Django 网站的部署。三年以来，第一个真正意义上的成功；工作有着落了；完成了困扰了三年夙愿；  
+9、重新从头建了一遍网站  
+10、使用 pysnooper 快速查找到了 bug，很快就解决了，没有用搜索引擎；在报错的最下面的文件中使用 pysnooper  
+11、运行成功原来的 flask 项目  
+
+
+
+
 ### 2021.01 
 
 1、一号。读完第二遍斋藤康毅《深度学习进阶》  
