--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -11,6 +11,7 @@
 
 ### 要注意的  
 ##### 不刷微博。不管有多大的新闻
+早起睡前读技术书，就不会想刷微博了  
 想刷微博就听 20 分钟书，成为本能反应  
 没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
 ##### 不要熬夜看电影。  
