--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -36,7 +36,11 @@
 ##### 成为一个优秀的人。可以有非常精彩的人生，可以做成许多伟大的事，可以认识许多伟大的人，可以结识很优秀的人，人生质量将会完全不一样。
 多读书  
 执行力  
-好习惯  
+#### 养成好习惯  
+瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
+18 个月养成一个习惯。  
+不刷微博：2021.03-2022.09；想想可以节省多少时间，想想可以读多少书，做成多少事  
+习惯就是 speed controller，不是影响一节课，而是几千几万几十万节课；习惯是影响一生中的每一天的。
 ##### 永不放弃。
 想放弃的时候，要想到机会成本，想到因为缺失一点的努力造成的巨大的损失    
 ##### 工业工程还是要读，还是要用。
