--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -55,7 +55,10 @@
 ##### 除了早起睡前段时间，不要躺着看书。  
 颈椎病会非常痛苦，会耽误时间，会影响人的状态，和工作的效率；影响形象，形象是反复使用的，驼背了就改不过来了；  
 ##### 买水果。  
-不买水果，就要买药  
+不买水果，就要买药；  
+##### 备些吃的
+准备些吃的，不花这个钱，试试得胃病花多少钱    
+面条、面包、  
 ##### 早刷牙是关键。  
 早刷牙十点多就能睡觉，晚了刷就是凌晨两三点睡；刷牙，牙疼起来非常痛苦。    
 ##### 做眼保健操。  
