--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -40,7 +40,7 @@
 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
 18 个月养成一个习惯。  
 不刷微博：2021.03-2022.09；想想可以节省多少时间，想想可以读多少书，做成多少事  
-习惯就是 speed controller，不是影响一节课，而是几千几万几十万节课；习惯是影响一生中的每一天的。
+习惯就是pysnooper，就是 speed controller，不是影响一节课，而是几千几万几十万节课；每一次遇到都会发挥作用；习惯是影响一生中的每一天的。
 ##### 永不放弃。
 想放弃的时候，要想到机会成本，想到因为缺失一点的努力造成的巨大的损失    
 ##### 工业工程还是要读，还是要用。
