--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -14,6 +14,8 @@
 早起睡前读技术书，就不会想刷微博了  
 想刷微博就听 20 分钟书，成为本能反应  
 没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
+
+因为从来不看短视频，所有有了时间来名著。是错过了一些有趣的东西，但是能比得上莎士比亚和但丁吗？致远恐泥。反复使用  
 ##### 不要熬夜看电影。  
 影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
 ##### 要是不看这些，早就成功了；并不想看；把现实中真的看没了，这就是代价；把一生看没了；splendid future 没了；作息不好会生病；  
