--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -1,4 +1,13 @@
 
+# Find out what works and keep doing it  
+1、移动大拇指  
+2021.03.11 成功  
+
+2、
+
+
+
+
 取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就永远都没了，人生只有一次。  
 
 如果记录下这 3 年的学习成就，肯定会非常精彩。已经做不到了。记录下工作以后，创业以后的成就。
@@ -16,6 +25,7 @@
 “这同样是一个非常非常有用的道理。每个人都有他的能力圈。要扩大那个能力圈是非常困难的。如果我不得不靠当音乐家来谋生……假设音乐是衡量文明的标准，那么我不知道必须把标准降到多低，我才能够有演出的机会。  
 所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
 重要的并不是跨了多少领域，而是在一个领域所能达到的高度  
+取胜系统在最大化或者最小化一个或几个变量上走到近乎荒谬的极端  
 周星驰电影、成龙、李连杰电影、赵本山春晚小品  
 4、读完第一遍《流畅的Python》  
 5、找到了一个新的学习方法，可以用微信读书的听书功能来读书，比自己读书要快得多，至少提高 5 倍，可以读技术书，可以读自己一直读不下去的书，可以复习读过的书；可以读完所有想读的书  
