--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -7,6 +7,13 @@
 
 
 
+## 不好的方面  
+1、吃饭看电影，一定耽误至少半天时间，每一次都是  
+原则就是吃饭要不然学习，要不然就什么都不做  
+
+
+
+
 
 取得的成就，做成的事情都记下来，以后回头看做了什么，都是最宝贵的记忆，不可复制，只能当下写，不写就永远都没了，人生只有一次。  
 
