--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -22,7 +22,7 @@
 
 因为从来不看短视频，所有有了时间来名著。是错过了一些有趣的东西，但是能比得上莎士比亚和但丁吗？致远恐泥。反复使用  
 ##### 吃饭不看电影，看了肯定至少要耽误半天，屡试不爽  
-
+原则就是吃饭要不然学习，要不然就什么都不做  
 ##### 不要熬夜看电影。  
 影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
 ##### 要是不看这些，早就成功了；并不想看；把现实中真的看没了，这就是代价；把一生看没了；splendid future 没了；作息不好会生病；  
