--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -16,7 +16,7 @@
 #### 原则：不要挑战自己的自制力，肯定失败  
 
 ##### 不刷微博。不管有多大的新闻
-早起睡前读技术书，就不会想刷微博了  
+早起睡前读技术书  
 想刷微博就听 20 分钟书，成为本能反应  
 没用，耽误了读书读经典的时间；不刷微博就有了读书和写文章的时间了；耽误了读编程书的时间，影响技能，影响工作，影响未来发展；影响未来结识的人；影响命运  
 
@@ -42,6 +42,8 @@
 
 
 ### 应该做的
+##### 早起睡前读技术书是关键  
+
 ##### 成为一个优秀的人。可以有非常精彩的人生，可以做成许多伟大的事，可以认识许多伟大的人，可以结识很优秀的人，人生质量将会完全不一样。
 多读书  
 执行力  
