--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -10,6 +10,10 @@
 3、早起读技术书  
 
 
+4、养成习惯最好的办法还是用番茄时钟，任务名称后面写倒计时；18 个月养成一个终生习惯    
+
+
+
 ## 不好的方面  
 1、吃饭看电影，一定耽误至少半天时间，每一次都是  
 原则就是吃饭要不然学习，要不然就什么都不做  
