--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -1,5 +1,16 @@
 
 # Figure out what works and keep doing it  
+
+### 原则
+1、不能只说不做什么，还要指明不做这些的时间用来做什么  
+比如不能只说早起不刷微博，而是说早起读技术书；不能只说吃饭不看电影，而是要说吃饭听书  
+
+2、完成一小步  
+读一个字，看一分钟，写一行代码  
+
+
+
+### 
 1、移动大拇指  
 2021.03.11 成功三次  
 
