--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -10,7 +10,8 @@
 
 
 
-### 
+### 实践  
+
 1、移动大拇指  
 2021.03.11 成功三次  
 
@@ -22,6 +23,11 @@
 
 
 4、养成习惯最好的办法还是用番茄时钟，任务名称后面写倒计时；18 个月养成一个终生习惯    
+
+
+5、敲代码 3 遍，really works  
+学会了 shell  
+
 
 
 
