--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -5,8 +5,8 @@
 1、不能只说不做什么，还要指明不做这些的时间用来做什么  
 比如不能只说早起不刷微博，而是说早起读技术书；不能只说吃饭不看电影，而是要说吃饭听书  
 
-2、完成一小步  
-读一个字，看一分钟，写一行代码  
+2、把大的任务拆分成一小段一小段，完成一小步  
+文章写一段、读一个字，看一分钟，写一行代码  
 
 
 
@@ -20,20 +20,20 @@
 
 
 3、早起读技术书  
+这一项，几分钟，就定下了一天的基调，非常有效  
 
 
-4、养成习惯最好的办法还是用番茄时钟，任务名称后面写倒计时；18 个月养成一个终生习惯    
+4、吃饭听书  
+一次节省 4 个小时，还增加了读书时间，非常有效  
+2021.03.15 成功一次  
 
 
-5、敲代码 3 遍，really works  
+5、养成习惯最好的办法还是用番茄时钟，任务名称后面写倒计时；18 个月养成一个终生习惯    
+
+
+6、敲代码 3 遍，really works  
 学会了 shell  
 
-
-
-
-## 不好的方面  
-1、吃饭看电影，一定耽误至少半天时间，每一次都是  
-原则就是吃饭要不然学习，要不然就什么都不做  
 
 
 
