--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -7,7 +7,9 @@
 3、看完韩顺平 Linux 课程，这是第三遍通看了，光看不行，还是要敲代码  
 4、看完黑马程序员 Python 多进程多线程课程  
 5、完成 Shell 编程入门  
-6、  
+6、弄懂了 cookie 和 session  
+7、弄懂了三次握手和四次挥手  
+8、  
 
 
 
@@ -39,8 +41,6 @@
 想读的书：欧几里得、达尔文、  
 编程：Python 进阶、http、Linux、Shell、Django、Flask、算法、go、JavaScript、  
 睡前早起读几页书  
-
-
 
 
 
