--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -10,8 +10,9 @@
 6、弄懂了 cookie 和 session  
 7、弄懂了三次握手和四次挥手  
 8、理解了正向代理和反向代理  
-9、实现了浏览器访问自己写的 TCP 服务器；彻底弄懂了客户端和服务器是怎么交互的；知道了客户端发给了服务器什么内容，服务器又发送给客户端什么内容；彻底弄懂了 form 表单是如何提交数据的；彻底弄懂了 cookie 和 session 是怎么发挥作用的；彻底弄懂了 Django 的运行原理；彻底弄懂了 Nginx 和 uwsgi 是怎么发挥作用的；在阿里云上跑通了自己写的 TCP 服务器，实现了远程访问；  
+9、实现了浏览器访问自己写的 TCP 服务器；彻底弄懂了客户端和服务器是怎么交互的；知道了客户端发给了服务器什么内容，服务器又发送给客户端什么内容；彻底弄懂了 form 表单是如何提交数据的；彻底弄懂了 cookie 和 session 是怎么发挥作用的；彻底弄懂了 CSRFtoken 是如何发挥作用的；彻底弄懂了 Django 的运行原理；彻底弄懂了 Nginx 和 uwsgi 是怎么发挥作用的；在阿里云上跑通了自己写的 TCP 服务器，实现了远程访问；  
 10、  
+
 
 
 ## 永远考虑机会成本  
