--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -14,7 +14,8 @@
 10、听完达尔文《物种起源》  
 11、读完《HTTP 权威指南》第二遍，完成笔记整理  
 12、完成 Django REST framework 的 Tutorial 文档  
-13、  
+13、看完《Django REST 框架》第二遍  
+14、   
 
 
 
