--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -17,7 +17,8 @@
 13、看完《Django REST 框架》视频课程第二遍  
 14、完成廖雪峰 WSGI 接口程序，知道了 uwsgi 是怎么和 Django 进行关联交互的  
 15、学完 3 门 Nginx 课程，彻底弄懂了反向代理、负载均衡和动静分离，知道了怎么配置；学编程还是要看视频，读书太慢  
-16、  
+16、学完一门 git 课程  
+17、  
 
 
 
