--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -18,7 +18,8 @@
 14、完成廖雪峰 WSGI 接口程序，知道了 uwsgi 是怎么和 Django 进行关联交互的  
 15、学完 3 门 Nginx 课程，彻底弄懂了反向代理、负载均衡和动静分离，知道了怎么配置；学编程还是要看视频，读书太慢  
 16、学完一门 git 课程  
-17、  
+17、看完 5 门 Python 多线程课程，弄懂了线程、进程、协程的概念，弄懂了并发并行、线程同步、join()、GIL、死锁、阻塞的概念    
+18、  
 
 
 
