--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -11,6 +11,26 @@
 
 写一辈子，每个月总结，每个月报告  
 
+### 2021.03  
+1、听完瑞·达利奥的《原则》  
+2、听完《党章》  
+3、看完韩顺平 Linux 课程，这是第三遍通看了，光看不行，还是要敲代码  
+4、看完黑马程序员 Python 多进程多线程课程  
+5、完成 Shell 编程入门  
+6、弄懂了 cookie 和 session  
+7、读完《TCP/IP协议及其应用》第二遍，弄懂了三次握手和四次挥手  
+8、理解了正向代理和反向代理  
+9、实现了浏览器访问自己写的 TCP 服务器；彻底弄懂了客户端和服务器是怎么交互的；知道了客户端发给了服务器什么内容，服务器又发送给客户端什么内容；彻底弄懂了 form 表单是如何提交数据的；彻底弄懂了 cookie 和 session 是怎么发挥作用的；彻底弄懂了 CSRFtoken 是如何发挥作用的；彻底弄懂了 Django 的运行原理；彻底弄懂了 Nginx 和 uwsgi 是怎么发挥作用的；在阿里云上跑通了自己写的 TCP 服务器，实现了远程访问；  
+10、听完达尔文《物种起源》  
+11、读完《HTTP 权威指南》第二遍，完成笔记整理  
+12、完成 Django REST framework 的 Tutorial 文档  
+13、看完《Django REST 框架》视频课程第二遍  
+14、完成廖雪峰 WSGI 接口程序，知道了 uwsgi 是怎么和 Django 进行关联交互的  
+15、学完 3 门 Nginx 课程，彻底弄懂了反向代理、负载均衡和动静分离，知道了怎么配置；学编程还是要看视频，读书太慢  
+16、学完一门 git 课程  
+17、看完 5 门 Python 多线程课程，弄懂了线程、进程、协程的概念，弄懂了并发并行、线程同步、join()、GIL、死锁、阻塞的概念    
+
+
 
 ### 2021.02 
 
@@ -21,7 +41,7 @@
 所以你们必须弄清楚你们有什么本领。如果你们要玩那些别人玩得很好而你们一窍不通的游戏，那么你们注定会一败涂地。那是必定无疑的事情。你们必须弄清楚自己的优势在哪里，必须在自己的能力圈之内竞争。”  
 重要的并不是跨了多少领域，而是在一个领域所能达到的高度  
 取胜系统在最大化或者最小化一个或几个变量上走到近乎荒谬的极端  
-周星驰电影、成龙、李连杰电影、赵本山春晚小品  
+周星驰“要有自己的风格”  
 4、读完第一遍《流畅的Python》  
 5、找到了一个新的学习方法，可以用微信读书的听书功能来读书，比自己读书要快得多，至少提高 5 倍，可以读技术书，可以读自己一直读不下去的书，可以复习读过的书；可以读完所有想读的书  
 6、学完《Django rest 框架》课程  
