--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -4,7 +4,9 @@
 ### 2021.04  
 1. 学完尚硅谷 GitHub 课程，第二遍了，整理完笔记，学习必须要整理笔记  
 2. 完成 Django REST framework 文档一遍  
-3. 
+3. 学会了怎么使用 PyCharm 来 debug Django，前景无限，可以查找问题，可以读源码  
+4. 学会了用 PyCharm 看文件结构，对读源码非常有帮助  
+5. 
 
 
 
