--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -6,7 +6,8 @@
 2. 完成 Django REST framework 文档一遍  
 3. 学会了怎么使用 PyCharm 来 debug Django，前景无限，可以查找问题，可以读源码  
 4. 学会了用 PyCharm 看文件结构，对读源码非常有帮助  
-5. 
+5. 读书时长超过 2400 小时  
+6. 
 
 
 
