--- a/pytorch/ch3/5分钟小目标.md
+++ b/pytorch/ch3/5分钟小目标.md
@@ -9,7 +9,9 @@
 5. 读书时长超过 2400 小时  
 6. 听完《数据结构》第一遍，比想象中容易多了，一遍就理解 30% 了
 7. 读完《Linux 命令大全(第二版)》第一遍  
-8. 
+8. 听完《数据结构》第二遍，读完《数据结构》第一遍
+9. 看完青岛大学王卓老师《数据结构》课程，讲的太好了
+10. 
 
 
 
