--- a/pytorch/ch3/已完成 写一辈子.md
+++ b/pytorch/ch3/已完成 写一辈子.md
@@ -11,6 +11,15 @@
 
 写一辈子，每个月总结，每个月报告  
 
+### 2021.05  
+1. 读书时长超过 2500 小时
+2. 听完《数据结构》第三遍  
+3. 在牛客网完成第一遍《剑指 offer》编程
+4. 读完《剑指 offer》
+5. 学完 Django 基础课程 184 节
+6. 读完《Django 开发实战》第二遍
+
+
 ### 2021.04  
 1. 学完尚硅谷 GitHub 课程，第二遍了，整理完笔记，学习必须要整理笔记  
 2. 完成 Django REST framework 文档一遍  
