--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -1,4 +1,5 @@
 
+### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。经常用，把所有的都用上
 
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 需要一个基准 base，以后再在这个上面补充改进
@@ -12,3 +13,8 @@
 2. 永远考虑机会成本
 3. 
 
+
+### 小 tricks
+1. 短时间的习惯，用微信 0/7  
+2. 微信提醒功能  
+3. 
