--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -11,10 +11,17 @@
 ## 方法
 1. 取消、合并、重排、简化
 2. 永远考虑机会成本
-3. 
+3. 读一行书、敲一行代码、跑一步、
+4. 
 
 
 ### 小 tricks
 1. 短时间的习惯，用微信 0/7  
 2. 微信提醒功能  
 3. 
+
+
+
+### 案例
+1. 合并，跑步听书，一年多读 50 本经典
+2. 
