--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,14 +1,14 @@
 
-### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。经常用，把所有的都用上
+### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
 
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 需要一个基准 base，以后再在这个上面补充改进
 3. 多学一条，解决一类问题；改进一件，改进几万件事
-4. 经常用
+4. 每天用
 5. 把所有的都用上
 
 ## 通用学习方法
-1. 经常想一些问题，带着问题读，主动阅读，
+1. 经常想一些问题，带着问题读，主动阅读(比如想要了解数据流动的过程)。遇到不懂的，遇到 bug 是非常好的事情。
 
 
 ## 编程学习方法
@@ -18,6 +18,7 @@
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，否则一直临摹别人，理解不深，几分钟就能写出一个来。
 5. 吃透一本权威的书，深入学习。有根基，有立身之本。重要的是质，而非量
 6. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
+7. 
 
 
 ### debug 工具
