--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -25,12 +25,13 @@
 
 ### 小 tricks
 1. 短时间的习惯，用微信 0/7  
-2. 微信提醒功能  
+2. 微信提醒功能，每天至少提醒一条
+3.   
 
 
 ### 案例
 1. 合并，跑步听书，一年多读 50 本经典
-2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松  
+2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；跑步，一棵树一个目标  
 3. restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一直不熟悉，敲了 6 遍代码就明白了；shell 5 遍就会了；it really works    
 
 
