--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -27,7 +27,8 @@
 ### 小 tricks
 1. 短时间的习惯，用微信 0/7  
 2. 微信提醒功能，每天至少提醒一条
-3.   
+3. 20 分钟分成 4 个 5 分钟，写纸上，完成一个打一个对钩，量化，可视化过程，可以看到进度，非常有成就感    
+4. 
 
 
 ### 案例
