--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,14 +1,8 @@
 
-### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
-
-1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
-2. 需要一个基准 base，以后再在这个上面补充改进
-3. 多学一条，解决一类问题；改进一件，改进几万件事
-4. 每天用
-5. 把所有的都用上
 
 ## 通用学习方法
-1. 经常想一些问题，带着问题读，主动阅读(比如想要了解数据流动的过程)。遇到不懂的，遇到 bug 是非常好的事情。
+1. 经常想一些问题，带着问题读，主动阅读(比如想要了解 Django 数据流动的过程)。遇到不懂的，遇到 bug 是非常好的事情。
+2. 
 
 
 ## 编程学习方法
@@ -24,6 +18,10 @@
 ### 小 tricks
 1. 长的单词，拆解成两个字母，两个字母的  
 2. 
+
+
+
+
 
 ### debug 工具
 弄懂符号，熟悉规则。最差最差，可以看到变量是什么  
