--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -1,6 +1,6 @@
 
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
-
+为什么要每天看？每天干活之前，拿上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 需要一个基准 base，以后再在这个上面补充改进
 3. 多学一条，解决一类问题；改进一件，改进几万件事
@@ -11,14 +11,17 @@
 ## 方法
 1. 永远考虑机会成本，是褚时健做事如此成功又如此漂亮的核心原因    
 2. 重复练习，永远错不了，极其有效，就可劲儿练去吧，it really works。任何一项技术，学 50 遍肯定就能成为本能了；一般 3 遍，重要的 5 遍，非常重要的 10 遍    
-3. 写一段、读一个字，看一分钟、敲一行代码、跑一步、(非常有效)  
+3. 写一段、读一个字，看一分钟、敲一行代码、跑一步、(非常有效)、一次不看、  
 4. 拆解，分而治之
 把大的任务拆分成一小段一小段，完成一小步  
 任务一天不超过 3 项，多了反而都不做了，集中力量，逐个击破  
 应该一直有一个是主要的事项  
 [《集中优势兵力，各个歼灭敌人》](https://www.marxists.org/chinese/maozedong/marxist.org-chinese-mao-19460916.htm) 这一项应该成为自己的做事原则，实践证明是非常成功的  
+仅仅经过四个月的喘息，南京就发动了第二次围剿，以现任军政部长何应钦为总司令。他的兵力超过二十万，分七路向苏区推进（敌人非常强大，困难非常大）。当时红军的处境被认为非常危急。苏维埃政权管辖的区域很小，资源有限，装备缺乏，敌人的物质力量在各方面都远远超过红军（自己资源极其有限）。但是，红军仍然坚持迄今赖以制胜的战术来对付这次进攻。我们放敌军诸路深入苏区，然后集中主力突然攻击敌第二路，打败了好几个团，摧毁了他们的进攻力量。我们马上迅速地相继进攻第三路、第六路、第七路，逐个击败他们。第四路不战而退，第五路被部分地消灭。在十四天中，红军打了六仗，走了八天路，结果得到决定性的胜利。蒋光鼐、蔡廷锴指挥的一路军，在其他六路被击溃或退却以后，没有认真打一仗就撤退了。  
 《七武士》  
-仅仅经过四个月的喘息，南京就发动了第二次围剿，以现任军政部长何应钦为总司令。他的兵力超过二十万，分七路向苏区推进。当时红军的处境被认为非常危急。苏维埃政权管辖的区域很小，资源有限，装备缺乏，敌人的物质力量在各方面都远远超过红军。但是，红军仍然坚持迄今赖以制胜的战术来对付这次进攻。我们放敌军诸路深入苏区，然后集中主力突然攻击敌第二路，打败了好几个团，摧毁了他们的进攻力量。我们马上迅速地相继进攻第三路、第六路、第七路，逐个击败他们。第四路不战而退，第五路被部分地消灭。在十四天中，红军打了六仗，走了八天路，结果得到决定性的胜利。蒋光鼐、蔡廷锴指挥的一路军，在其他六路被击溃或退却以后，没有认真打一仗就撤退了。  
+先克服一个困难，再克服其他的。  
+先克服一个坏习惯，再克服另一个坏习惯  
+先养成一个好习惯，再养成另一个好习惯  
 5. 取消、合并、重排、简化  
 6. 
 
@@ -33,7 +36,7 @@
 
 ### 案例
 1. 合并，跑步听书，一年多读 50 本经典
-2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；跑步，一棵树一个目标  
+2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；跑步，一棵树一个目标；几天不看、一天不看、一次不看  
 3. restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一直不熟悉，敲了 6 遍代码就明白了；shell 5 遍就会了；it really works    
 
 
