--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -38,5 +38,15 @@
 1. 合并，跑步听书，一年多读 50 本经典
 2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；跑步，一棵树一个目标；几天不看、一天不看、一次不看  
 3. restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一直不熟悉，敲了 6 遍代码就明白了；shell 5 遍就会了；it really works    
+4. 
+
+
+### 生活相关  
+1. 锻炼身体，跑步，以任辉启院士为榜样，五十年每天六公里  
+2. 午休 20 分钟就够了  
+3. 
+
+
+### 原来用过的，后来因为形势变化而不用的
 
 
