--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -1,9 +1,37 @@
 
-文章视频方法品质，一两句话就行，有和没有天壤之别，
+文章视频方法品质，一两句话就行，有和没有天壤之别  
+
+不用就忘  
+
+一次整理，终生受用  
 
 
 
 
+
+
+
+#### 钱七虎院士  
+
+
+#### 顾诵芬院士  
+飞机空气动力学家。歼-8 总设计师
+##### 《开讲啦》 
+七七事变以后，经历了日本鬼子的飞机的轰炸，没有防空力量，就受尽人的欺负，所以就暗暗下决心，将来要搞飞机  
+
+我们搞科技的人，必须首先想到的是国家，我们的事情都是为了保卫国家来做的，这是第一点。  
+第二点呢，好多事情你要做，那就不能凭空想，而必须找一些材料，需要认真地读书，读书呢还是孔夫子的话，就只读书不去用，不去想，那是空的，但是你不读书，净想事儿的话，也是空的。  
+再有一点，干这些事儿都得集体干，所以你对参加这工作的每个同志，都应该很尊重。应该团结大家一起来弄。  
+最后一点，就是干任何事，不能把自己的名利放在第一位，千万别考虑个人得失   
+
+#### 黄纬禄院士
+自动控制专家  
+##### 《军工记忆》
+
+
+#### 王大珩院士  
+应用光学专家，我国光学事业奠基人之一。  
+##### 《大家》
 
 
 每次看一个，就添加到栈顶  
