--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -17,11 +17,13 @@
 
 ### 小 tricks
 1. 长的单词，拆解成两个字母，两个字母的  
-2. 
+2. 写项目，遇到 bug，能解决的解决，解决不了的先跳过，有些错误不重要，不应该花费太多的时间，说不定后面写着写着就改过来了，或者后面就知道错在哪里了  
+3. 
 
 
 
 
+### 原来用过的，后来因为形势变化而不用的
 
 ### debug 工具
 弄懂符号，熟悉规则。最差最差，可以看到变量是什么  
