--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -1,6 +1,6 @@
 
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
-为什么要每天看？每天干活之前，拿上工具  
+每天都要看，每天干活之前，拿上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 需要一个基准 base，以后再在这个上面补充改进
 3. 多学一条，解决一类问题；改进一件，改进几万件事
@@ -30,8 +30,9 @@
 ### 小 tricks
 1. 短时间的习惯，用微信 0/7  
 2. 微信提醒功能，每天至少提醒一条
-3. 20 分钟分成 4 个 5 分钟，写纸上，完成一个打一个对钩，量化，可视化过程，可以看到进度，非常有成就感    
-4. 
+3. 写当天任务，完成打对勾；明确目标，量化任务，知道差距，有成就感  
+4. 20 分钟分成 4 个 5 分钟，写纸上，完成一个打一个对钩，分而治之，可视化过程，可以看到进度    
+5. 
 
 
 ### 案例
