--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -43,9 +43,10 @@
 
 
 ### 生活相关  
-1. 锻炼身体，跑步，以任辉启院士为榜样，五十年每天六公里  
-2. 午休 20 分钟就够了  
-3. 
+1. 锻炼身体，跑步，以任辉启院士为榜样，五十年每天六公里
+2. 跑步，4 步一个目标  
+3. 午休 20 分钟就够了  
+4. 
 
 
 ### 原来用过的，后来因为形势变化而不用的
