--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,8 +1,10 @@
 
 
 ## 通用学习方法
-1. 经常想一些问题，带着问题读，主动阅读(比如想要了解 Django 数据流动的过程)。遇到不懂的，遇到 bug 是非常好的事情。
-2. 
+1. 经常想一些问题，带着问题读，主动阅读(比如想要了解 Django 数据流动的过程)。
+2. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
+3. 想一想自己实现什么功能，写小 demo，会触发主动阅读  
+4. 
 
 
 ## 编程学习方法
@@ -23,7 +25,6 @@
 
 
 
-### 原来用过的，后来因为形势变化而不用的
 
 ### debug 工具
 弄懂符号，熟悉规则。最差最差，可以看到变量是什么  
@@ -33,3 +34,5 @@
 4. pythontutor
 5. 改一改看变化
 6. 遇到复杂的概念和公式和编程函数的时候，拆解成小块，再具体化往往非常有帮助。实例化成最简单的例子。
+
+
