--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -5,7 +5,9 @@
 2. 需要一个基准 base，以后再在这个上面补充改进
 3. 多学一条，解决一类问题；改进一件，改进几万件事
 4. 每天用
-5. 把所有的都用上
+5. **把所有的都用上**
+6. 每天看，每天用，才能不断改进
+7. 
 
 
 ## 方法
@@ -49,6 +51,6 @@
 4. 
 
 
-### 原来用过的，后来因为形势变化而不用的
+
 
 
