--- a/pytorch/ch3/永远考虑机会成本.md
+++ b/pytorch/ch3/永远考虑机会成本.md
@@ -1,18 +1,22 @@
 
-瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
 
-不刷微博、不看视频、做事能够不是做到一半去做别的  
+褚时健的做法非常成功非常漂亮，他的方法的核心就是把机会成本贯穿于每一个环节之中  
 
-做事可以像褚时健一样  
+所有考虑机会成本的做法，都非常漂亮  
 
-## 永远考虑机会成本  
-### 应该做的
-1、早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦。  
-2、买水果。不买水果，就要买药  
-3、读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
+
+### 别人的例子  
+1. 子夏曰：“虽小道，必有可观者焉；致远恐泥，是以君子不为也。”  
+2. 褚时健例子整理，听一遍
+3. 瑞达里奥：想象一下，如果戒掉自己三个最大的坏习惯，自己的生活会有多大的改变  
+
+
+### 自己应该做的
+1. 早起早睡锻炼身体。肩负重任；决策树理论，身体是一切的根本，没有身体什么都没有；健康是反复使用贯穿始终的；读《手术刀下的历史》：病是非常多的，不要把健康视作理所当然，健康是极其重要的，治疗是极其痛苦的，是昂贵的。早起早睡锻炼身体是最容易的，是收益最高的；
+2. 不锻炼身体，试试生病多痛苦；觉得运动耽误时间，试试生病治疗耽误多少时间。刷牙，牙疼起来非常痛苦；买水果。不买水果，就要买药  
+3. 读经典：读什么书就是什么样的人，是一生最重要的抉择。读经典是最好的。  
+4. 
 
 
 
 ### 不应该做的  
-1、熬夜看电影。影响作息，对身体极为有害；半个月调整不过来，白天没精神，晚上睡不好，两个小时影响两百个小时  
-2、
