--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -15,8 +15,8 @@
 
 
 #### 顾诵芬院士  
-飞机空气动力学家。歼-8 总设计师
-##### 《开讲啦》 
+飞机空气动力学家。歼-8 总设计师  
+《开讲啦》   
 七七事变以后，经历了日本鬼子的飞机的轰炸，没有防空力量，就受尽人的欺负，所以就暗暗下决心，将来要搞飞机  
 
 我们搞科技的人，必须首先想到的是国家，我们的事情都是为了保卫国家来做的，这是第一点。  
@@ -24,14 +24,51 @@
 再有一点，干这些事儿都得集体干，所以你对参加这工作的每个同志，都应该很尊重。应该团结大家一起来弄。  
 最后一点，就是干任何事，不能把自己的名利放在第一位，千万别考虑个人得失   
 
+《面对面》  
+每天 8 点半，准时来上班  
+问：别人当顾问就是顾得着就去问问，顾不着就不问了，您这当了顾问，还每天都要问。  
+答：因为对航空有兴趣  
+
+问：但是像您这样年纪的大师，很多都可能是安享晚年之乐了  
+答：**了解航空的进展，就是我的晚年之乐。**  
+
+**徐舜寿同志觉得这个队伍，不能是靠学习来培养，必须从实践当中锻炼。**  
+
+当时那些怎么做都不懂，就一边看书、一边想、一边做，这么弄出来的  
+
+工作劳累过度，摔倒了，完全是一个昏迷的状态，住院住了一个多礼拜，但是中间清醒了一会儿，还记得让助手去开一个会，就是飞机的事儿  
+
+吃药总是拖，但是上班天天准时去。喜欢，愿意去  
+
+
+
 #### 黄纬禄院士
 自动控制专家  
-##### 《军工记忆》
+《军工记忆》  
 
 
 #### 王大珩院士  
 应用光学专家，我国光学事业奠基人之一。  
-##### 《大家》
+《大家》  
+
+
+#### 于敏院士  
+《大家》  
+
+
+
+### 事业的 commitment  
+每年工作 6000 个小时，工作 60 年  
+马斯克：要做自己喜欢的事，这样即使不工作的时候，脑子里也在想着这些事情。  
+1. 王大珩院士：同事们劝王大珩休息，王大珩十分认真地说：“谁剥夺我工作的权利就是剥夺我的生命。”  
+2. 顾诵芬院士：问：但是像您这样年纪的大师，很多都可能是安享晚年之乐了。答：了解航空的进展，就是我的晚年之乐。  
+3. 臧克茂院士：所以有人问你的爱好是什么？说实话，我的爱好就是继续工作。
+4. 王选院士：最后的 1941 天里，有 798 天住院或治疗，医生说活不过两年，他坚持了五年多，一好转就投入到工作中。
+5. 林俊德院士：“我不能躺下，一躺就起不来了”
+6. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
+7. 
+
+
 
 
 每次看一个，就添加到栈顶  
