--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -11,10 +11,10 @@
 
 
 
-#### 钱七虎院士  
+### 钱七虎院士  
 
 
-#### 顾诵芬院士  
+### 顾诵芬院士  
 飞机空气动力学家。歼-8 总设计师  
 《开讲啦》   
 七七事变以后，经历了日本鬼子的飞机的轰炸，没有防空力量，就受尽人的欺负，所以就暗暗下决心，将来要搞飞机  
@@ -42,17 +42,17 @@
 
 
 
-#### 黄纬禄院士
+### 黄纬禄院士
 自动控制专家  
 《军工记忆》  
 
 
-#### 王大珩院士  
+### 王大珩院士  
 应用光学专家，我国光学事业奠基人之一。  
 《大家》  
 
 
-#### 于敏院士  
+### 于敏院士  
 《大家》  
 
 
