--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -3,13 +3,13 @@
 ## 通用学习方法
 1. 经常想一些问题，带着问题读，主动阅读(比如想要了解 Django 数据流动的过程)。
 2. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
-3. 想一想自己实现什么功能，写小 demo，会触发主动阅读  
+3. 想一想自己实现什么功能，写小 demo，会触发主动阅读。徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 
 
 
 ## 编程学习方法
 1. 读源码
-2. 先做出项目来，再深究细节
+2. 先做出项目来，再深究细节。避免“深入学习综合征”
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，否则一直临摹别人，理解不深，几分钟就能写出一个来。
 5. 吃透一本权威的书，深入学习。有根基，有立身之本。重要的是质，而非量
