--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,9 +1,9 @@
 
 
 ## 通用学习方法
-1. 经常想一些问题，带着问题读，主动阅读(比如想要了解 Django 数据流动的过程)。
+1. 经常想一些问题，带着问题读，主动阅读是最好的学习方式 (比如想要了解 Django 数据流动的过程）。
 2. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
-3. 想一想自己实现什么功能，写小 demo，会触发主动阅读。徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
+3. 看一遍书自己回想着写写，或者想一想自己实现什么功能，写小 demo，会触发主动阅读。徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 
 
 
