--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -36,6 +36,8 @@
 
 当时那些怎么做都不懂，就一边看书、一边想、一边做，这么弄出来的  
 
+那个时候正是文化大革命，比较乱的时候，我当然是靠边站。当时我最伤心的一件事，他们那个造反派的，清理阶级队伍那些人，跟我说了一句话，说你今后再也不能在航空干事儿了，当时我心里很悲痛，我觉得要跟航空断了。  
+
 工作劳累过度，摔倒了，完全是一个昏迷的状态，住院住了一个多礼拜，但是中间清醒了一会儿，还记得让助手去开一个会，就是飞机的事儿  
 
 吃药总是拖，但是上班天天准时去。喜欢，愿意去  
@@ -53,7 +55,17 @@
 
 
 ### 于敏院士  
+核物理学家  
 《大家》  
+我不笨，我自己认为我也不聪明，但是我方才说过，我是很勤奋的。  
+
+那个年代，正是抗日战争的前后，受日本人的侮辱、压迫。我那个时候刚学会骑车，找同学借了一辆车到他家去，迎面来了一个日本人，开着吉普车，不怀好意吧，他就冲着我来了，冲着我眼看就要撞上了，如果撞上我就完蛋了。可以想象，这是在天津，如果是在乡下，小地方，可能我一命难保。我那个时候还小，只有十二三岁，我一定要立志报国，科学救国。  
+
+杜鲁门跟艾森豪威尔都赤裸裸地讲，他们绝不能让中国搞氢弹，并且派军舰带着核武器，到我们近海来，是可忍孰不可忍。我过去学的东西都可以抛，都可以抛掉，我一定要全力以赴搞出来。  
+
+两表酬三顾，一对足千秋。当然时代不同了，但是战略部署的精神，是很值得思索，很值得考虑的。同时他的忠心耿耿，这种赤胆忠心，我想应该是中华民族的宝贵财富。  
+
+臣鞠躬尽瘁，死而后已，死而后已。  
 
 
 
