--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -2,12 +2,13 @@
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
 每天都要看，每天干活之前，拿上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
-2. 需要一个基准 base，以后再在这个上面补充改进
-3. 多学一条，解决一类问题；改进一件，改进几万件事
-4. 每天用
-5. **把所有的都用上**
-6. 每天看，每天用，才能不断改进
-7. 
+2. 算法效果相差几亿倍，马斯克就是有好的算法
+3. 需要一个基准 base，以后再在这个上面补充改进
+4. 多学一条，解决一类问题；改进一件，改进几万件事
+5. 每天用
+6. **把所有的都用上**
+7. 每天看，每天用，才能不断改进
+8. 
 
 
 ## 方法
