--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -3,11 +3,11 @@
 ## 通用学习方法
 1. 经常想一些问题，带着问题读，主动阅读是最好的学习方法 (比如想要了解 Django 数据流动的过程）。
 2. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
-3. 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
-几分钟写一个小 demo，想一想自己想实现什么功能  
+3. 几分钟写一个小 demo，想一想自己想实现什么功能  
 看一遍书自己回想着写写，报错是最好的事，可以深化薄弱的部分，会触发主动阅读，主动阅读是最好的学习方法；然后再自己发挥创造  
 大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系  
 原来的学习方法不行，不是主动阅读，效率太低，效果太差，记不住  
+徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 
 
 ## 编程学习方法
@@ -17,7 +17,8 @@
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，否则一直临摹别人，理解不深，几分钟就能写出一个来。
 5. 吃透一本权威的书，深入学习。有根基，有立身之本。重要的是质，而非量
 6. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
-7. 
+7. 算法学习方法：先照着写一遍，再自己想着写一遍，再修改，再照着写一遍，再想着写一遍，再修改，再照着写一遍  
+8. 
 
 
 ### 小 tricks
