--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -1,15 +1,15 @@
 
 
 ## 通用学习方法
-1. 经常想一些问题，带着问题读，主动阅读是最好的学习方法。错了才知道要 search 什么，犯错才是这个方法的核心。由于人越渴，喝到水时，乐趣就越大。——但丁《神曲》
-2. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
-3. 几分钟写一个小 demo，想一想自己想实现什么功能  
-看一遍书自己回想着写写，报错是最好的事，可以深化薄弱的部分，会触发主动阅读，主动阅读是最好的学习方法；然后再自己发挥创造  
-大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系  
-原来的学习方法不行，不是主动阅读，效率太低，效果太差，记不住  
+1. 经常想一些问题，带着问题读，主动阅读是最好的学习方法。
+2. 大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系。
+3. 犯错才是学习的核心。犯错是最好，错了才知道要 search 什么，可以深化薄弱的部分，会触发主动阅读，主动阅读是最好的学习方法。由于人越渴，喝到水时，乐趣就越大。——但丁《神曲》
+4. 几分钟写一个小 demo，想一想自己想实现什么功能  
+先看一遍书自己回想着写写，然后再自己扩展发挥创造  
 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 整理《如何阅读一本书》
-5. 
+5. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
+6. 
 
 ## 编程学习方法
 1. 读源码
