--- a/pytorch/ch3/原来用过的.md
+++ b/pytorch/ch3/原来用过的.md
@@ -1,7 +1,10 @@
 原来用过的，后来因为形势变化而不用的
 
 ### 学习方法  
-
+1. 实践已经证明，这种学习方法不行，不是主动阅读，效率太低，效果太差，记不住；学了两年 requests get 网站的 icon 都不会写  
+重复练习，永远错不了，极其有效，就可劲儿练去吧，it really works。任何一项技术，学 50 遍肯定就能成为本能了；一般 3 遍，重要的 5 遍，非常重要的 10 遍    
+restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一直不熟悉，敲了 6 遍代码就明白了；shell 5 遍就会了；it really works    
+(可能在基础阅读阶段是有用的，先认识符号，熟悉规则，之后就要用主动阅读)  
 
 
 ### 做事方法  
