--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -2,9 +2,9 @@
 ### 方法就是可以被反复使用的工具，有好的工具就可以无往不利。
 每天都要看，每天干活之前，拿上工具  
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
-2. 算法效果相差几亿倍，马斯克就是有好的算法
-3. 需要一个基准 base，以后再在这个上面补充改进
-4. 多学一条，解决一类问题；改进一件，改进几万件事
+2. 方法改变的是复杂度，多个数量级，效果相差已经不是几亿倍可以形容的了，马斯克就是有好的算法
+3. 多学一条，解决一类问题；改进一件，改进几万件事
+4. 需要一个基准 base，以后再在这个上面补充改进
 5. 每天用
 6. **把所有的都用上**
 7. 每天看，每天用，才能不断改进
@@ -13,7 +13,7 @@
 
 ## 方法
 1. 永远考虑机会成本，是褚时健做事如此成功又如此漂亮的核心原因    
-2. 重复练习，永远错不了，极其有效，就可劲儿练去吧，it really works。任何一项技术，学 50 遍肯定就能成为本能了；一般 3 遍，重要的 5 遍，非常重要的 10 遍    
+2. 犯错才是学习的核心，会触发主动阅读，主动阅读是最好的学习方法
 3. 写一段、读一个字，看一分钟、敲一行代码、跑一步、  
 4. 拆解，分而治之
 把大的任务拆分成一小段一小段，完成一小步  
@@ -26,7 +26,7 @@
 5. 应该一直有一个是主要的事项；任务一天不超过 3 项，多了反而都不做了，集中力量，逐个击破    
 6. 取消、合并、重排、简化  
 7. 
-
+8. 
 
 
 ### 小 tricks
@@ -40,7 +40,7 @@
 ### 案例
 1. 合并，跑步听书，一年多读 50 本经典
 2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；  
-3. restful 文档，敲到第 3 遍就知道在干什么了；Nginx 三年了都一直不熟悉，敲了 6 遍代码就明白了；shell 5 遍就会了；it really works    
+3. 集中优势兵力，半个小时就读完了《红星照耀中国》，之前半个月没看几页
 4. 
 
 
@@ -49,8 +49,6 @@
 2. 跑步，4 步一个目标  
 3. 午休 20 分钟就够了，睡多了是有害的，不要矫情，想想林俊德院士    
 4. 
-
-
 
 
 
