--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -52,12 +52,29 @@
 
 
 ### 王大珩院士  
-应用光学专家，我国光学事业奠基人之一。  
+应用光学专家，我国光学事业奠基人之一、863 计划的主要倡议者、建立中国工程院的主要倡议者、战略科学家、一代宗师    
 《大家》  
+问：您现在是不是非常想了解一些新的信息，新的知识  
+答：对对对，好像这是我们，也可以说是本质上的一个使命吧（获取智慧是一种道德责任）  
+
+863 计划，改变世界史的伟大计划，自己是受益者  
+1. 高技术东西，有跟没有大不一样。是个战略问题，所以要有，大点小点那是另外一回事情。
+2. 第二个意见，我们国家只能是重点地搞，重点是怎么重点呢，要利用这个作为一个种子，能够带动其他的方面。（资源匮乏的时候的做法）
+3. 第三个意见是，人才的培养必须是，就现在已有的基础上培养，把这些人放弃了是不行的  
+
+张劲夫就问你们要多少钱？我们都说不出来，后来王淦昌在会上说了一句，就是几个亿吧。后来给了一百个亿。  
+
+邓小平批示：此事宜速速决断，不可拖延。  
+
+科技差距明显缩小、创造了巨大的经济效益、培养了大量人才  
+
+文章  
+同事们劝王大珩休息，王大珩十分认真地说：“谁剥夺我工作的权利就是剥夺我的生命。”  
+
 
 
 ### 于敏院士  
-核物理学家  
+核物理学家、氢弹  
 《大家》  
 我不笨，我自己认为我也不聪明，但是我方才说过，我是很勤奋的。  
 
@@ -81,7 +98,6 @@
 5. 林俊德院士：“我不能躺下，一躺就起不来了”
 6. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
 7. 
-
 
 
 
