--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -4,7 +4,7 @@
 1. 从来没总结过，从来没整理过，做法非常原始朴素，效率非常低，做事常常久攻不下。
 2. 方法改变的是复杂度，多个数量级，效果相差已经不是几亿倍可以形容的了，马斯克就是有好的算法
 3. 多学一条，解决一类问题；改进一件，改进几万件事
-4. 需要一个基准 base，以后再在这个上面补充改进
+4. 需要一个基准 base，以后再在这个上面补充改进；王大珩院士：有和没有大不一样
 5. 每天用
 6. **把所有的都用上**
 7. 每天看，每天用，才能不断改进
