--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -1,10 +1,9 @@
 
-文章视频方法品质，一两句话就行，有和没有天壤之别  
+文章视频方法品质，一两句话就行，有和没有天壤之别；王大珩院士：有和没有大不一样    
 
 不用就忘  
 
 一次整理，终生受用  
-
 
 
 
@@ -59,7 +58,7 @@
 
 863 计划，改变世界史的伟大计划，自己是受益者  
 1. 高技术东西，有跟没有大不一样。是个战略问题，所以要有，大点小点那是另外一回事情。
-2. 第二个意见，我们国家只能是重点地搞，重点是怎么重点呢，要利用这个作为一个种子，能够带动其他的方面。（资源匮乏的时候的做法）
+2. 第二个意见，我们国家只能是重点地搞，重点是怎么重点呢，要利用这个作为一个种子，能够带动其他的方面。（资源匮乏的时候的做法）（学习先学重点的，先做出程序来，不要每门课都从第一节开始看）
 3. 第三个意见是，人才的培养必须是，就现在已有的基础上培养，把这些人放弃了是不行的  
 
 张劲夫就问你们要多少钱？我们都说不出来，后来王淦昌在会上说了一句，就是几个亿吧。后来给了一百个亿。  
