--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -9,7 +9,10 @@
 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 整理《如何阅读一本书》
 5. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻
-6. 
+6. 资源有限的时候，先重点突破，王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
+7. 
+
+
 
 ## 编程学习方法
 1. 读源码
