--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -12,6 +12,38 @@
 不看新闻  
 
 
+### 杨振宁  
+
+[杨振宁讲座](https://www.bilibili.com/video/BV1fx411r71U/?spm_id_from=333.788.videocard.0)  
+
+中国现在科技的成就非常不容易，1900 年甚至都认为中国人学不会现代科技  
+
+几代人的培养，才能在国内学到最前沿的科学知识  
+
+原子弹非常难，过程和环节非常多   
+
+氢弹更难   
+
+1400 年以前 中国科技领先  
+1400 年 - 1600 年 举步不前  
+1600 年 - 1900 年 抗拒新思想  
+1900 年 - 1950 年 快速引进西方科学  
+1950 年 - 2000 年 跻身先进科技国家行列  
+
+21 世纪中国科技会突飞猛进：
+1. 中国有数不清的、极聪明的、极可造就的青年  
+2. 儒家传统注重人伦、注重勤俭与忍耐，注重教育。这将会培养出一代又一代勤奋努力的青年
+3. 儒家传统的保守性造成中国数百年的封闭现象。但是今天封闭现象已经完全消失，代之而起的是对近代科技的热忱；（我认为有儒家的影响，但是感觉更多的是以前的成功造成的自大骄傲，参照现在西方）
+4. GDP 发展会超过美国
+
+可能有人会说中国以后会遇到各种问题，比如社会动乱问题、体制改革问题、贫富问题、外交问题等等数不清的问题，为什么还这么乐观呢？我有一个很好的回答，你只要想想 20 世纪发生了什么事情，前面这些每一项都是数不清的问题。但是这些并没有阻止中国在 20 世纪里头在科技里头的突飞猛进。这代表这些问题有影响，但是都不是基础性的影响。  
+
+科技的发展是很简单的事情，科技发展需要：人才、训练、决心、财力，已经有了三个，财力后面一定会解决  
+
+所以结论就是到二十一世纪中叶，中国将成为科技大国  
+
+
+
 ### 钱七虎院士  
 
 
@@ -50,6 +82,32 @@
 《军工记忆》  
 
 
+《科技人生·雷震海天》  
+潜地导弹，主要是指从潜艇下面发射的这个导弹，潜艇它可以在水下行走，比较隐蔽，距离远，不易被发现。可以接近到敌方的海岸边上再打。  
+
+不久之后，英国军队缴获了一枚 V2 导弹，它被放在博物馆里供人们参观。黄纬禄又一次近距离地接触了这个秘密武器。  
+“长大概有七八米，这个算是一个庞然大物。当时看到这个就觉得，假设我们国家有这个东西，也不至于被人家欺负得这么苦。”  
+
+实验的失败让他承受了巨大的压力，短短两个月时间，体重减轻了 20 多斤  
+
+“在整个研究实验过程当中，有成功，有失败，成功固然可喜，失败也不可悲。往往失败当中所取得的经验教训，比成功时候所取得的经验还要宝贵。因为你失败的这一次，对于脑子的印象特别深刻，以后再不会犯这个同样的错误。”  
+
+找到原因之后，向张爱萍将军请求发射第二发，北京打来电话，推迟发射。这个时候再发射失败，所有结果要一人承担。如果推迟发射，自己不用承担风险，但是会错过有利的发射时机，给国家造成的损失和不良的政治影响是难以挽回的。黄纬禄请求，不宜推迟，请求按时发射。  
+
+“我觉得作为一个技术指挥员，任何时候都应该以党和国家的事业为重，从实际出发，大胆负责，而不应该考虑个人的得失。”  
+
+他的妻子为了他的工作，放弃了自己的事业，一直默默支持黄纬禄全力投入导弹事业。  
+
+他的女儿说，母亲去世前一天，他就端了一把椅子坐在床边上，给她轻轻地揉脚。就是这样一个小时一个小时揉着，其实那天是从早上开始揉的，中间吃饭停了一下，这样一直到天黑。  
+
+这么多年我没听他提过任何要求，没听他有过任何抱怨。也没有听他就是生病很厉害的时候，人觉得特别不舒服，他没有诉过一句苦。  
+
+记得匈牙利爱国诗人斐多菲写过这样的诗句：“纵使世界给我珍宝和荣誉，我也不愿离开我的祖国。纵使我的祖国在耻辱当中，我还是喜欢、热爱、祝福我的祖国。”  
+
+
+
+
+
 ### 王大珩院士  
 应用光学专家，我国光学事业奠基人之一、863 计划的主要倡议者、建立中国工程院的主要倡议者、战略科学家、一代宗师    
 《大家》  
@@ -83,6 +141,10 @@
 
 两表酬三顾，一对足千秋。当然时代不同了，但是战略部署的精神，是很值得思索，很值得考虑的。同时他的忠心耿耿，这种赤胆忠心，我想应该是中华民族的宝贵财富。  
 
+最大第一个遗憾就是 亏欠。第一个亏欠的就是我的爱人，不幸前两年去世。她照顾了我 55 年，我觉得对比起她。第二个是我对我的孩子们管教太少，他们大概现在也在抱怨。
+
+惟将终夜长开眼，报答平生未展眉。经常地 睹物思情。  
+
 臣鞠躬尽瘁，死而后已，死而后已。  
 
 
@@ -99,5 +161,3 @@
 7. 
 
 
-
-每次看一个，就添加到栈顶  
