--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -16,7 +16,7 @@
 
 [杨振宁讲座](https://www.bilibili.com/video/BV1fx411r71U/?spm_id_from=333.788.videocard.0)  
 
-中国现在科技的成就非常不容易，1900 年甚至都认为中国人学不会现代科技  
+中国现在科技的成就非常不容易，1900 年甚至都认为中国人学不会现代科技，认为种族退化了    
 
 几代人的培养，才能在国内学到最前沿的科学知识  
 
