--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -104,7 +104,13 @@
 
 记得匈牙利爱国诗人斐多菲写过这样的诗句：“纵使世界给我珍宝和荣誉，我也不愿离开我的祖国。纵使我的祖国在耻辱当中，我还是喜欢、热爱、祝福我的祖国。”  
 
+《人民日报》公众号  
 
+“我印象最深的一件事是，有一天晚上，父亲拿了一件‘汗背心’，让姑姑帮忙缝一下，说衣服破了。  
+
+姑姑拿这件衣服就在灯底下照了一下，衣服在心口的位置已经透亮了，要破了。于是问父亲为什么会破在这个地方？  
+
+父亲很平静地说，心口痛，揉得久了就破了。”  
 
 
 
