--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -167,3 +167,12 @@
 7. 
 
 
+起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
+
+这些年看到我们的发展，意识到我们可能不久以后就会成为人类有史以来最强大的国家。这个带来了巨大的震撼。  
+
+伟大的事业背后一定是有一群伟大的人物和伟大的精神，但是我却一无所知。所以就重新开始了对我们自己国家近现代史的学习。  
+
+这个过程中，看到了“两弹一星”，看到了军工发展，看到了对他们的采访，纪录片中有很多院士，慢慢就认识了很多，这些人学术造诣，赤子之心，让我深受感动。慢慢就越看越多了。  
+
+他们是我们国家这些年发展的中流砥柱，为人类的发展做出了非常大的贡献，是人类有史以来最了不起的人群之一。  
