--- a/pytorch/ch3/《军工记忆》.md
+++ b/pytorch/ch3/《军工记忆》.md
@@ -6,3 +6,75 @@
 做了什么事，什么条件下，遇到了什么困难，怎么解决的  
 
 
+### 第1集《“东方红一号”人造卫星》  
+
+当时的中国国力和科研基础都还不足以支撑卫星研制，只能先集中精力搞原子弹和导弹。  
+
+中央决定在 1970 年发射卫星，给科研人员留下的时间只有 5 年，
+
+既没有专业队伍，也没有基础学科支撑  
+
+什么都不懂，想吃馒头，馒头买不到，面粉也买不到，小麦也买不到，要开荒种麦子  
+
+刚开始就赶上“文革”，扰乱了各个部门的研制进度  
+
+之前进展不大，中国空间技术研究院正式成立时，已经是 1968 年 2 月，距离发射时间只剩下短短两年  
+
+负责总体设计的孙家栋决定，第一步，先精简计划。  
+
+把科研探测项目都先拿下来，放在第二颗星上，保证第一颗上天，能达到掌握航天技术的基本任务，能把队伍培养起来。  
+
+计算设备是手摇计算机，任务急的时候要上算盘  
+
+算轨道，算了整整一年，就是三班倒，每班 8 小时下班。必须两个人对着算，因为很有可能算错  
+
+闵桂荣院士，负责“东方红一号”的温控公关，但是他之前从来没学过温控专业，连太空知识都很少。清华、北大、北航都没有这个专业，所以就得自己来组建。边干边学。  
+
+没有什么诀窍，就是从头做起，把能想到的问题全部列出来，从原理开始，一个一个地解决。  
+
+最后达到的是一个零电耗的方案。利用跟踪系统，音乐系统的余热来进行温控。  
+
+恶劣的太空条件，对上星设备都有很苛刻的技术要求，但是当时中国的整体工业水平比较落后，几乎每一个部件都过不了质量关。  
+
+当时最大的希望是一个插头能有 21 个节点，就这么个简单的事情，当年我们国家生产插头的水平就很难做到  
+
+插头生产出来了，但是却不能通过振动试验  
+
+做振动试验，带着被子，带着褥子，到那儿躺着。冬天就弄个大衣，在那儿一盖，就是那样过来的。没信号了，就要开罐子，然后又要重新开始做  
+
+液氮要自己蹬三轮去拉  
+
+没有低温实验室，用了解放军海军后勤部的一个冷库，脏得很，肉啊，鱼啊。  
+
+跟踪系统有一套应答机，要求体积很小，重量很轻，要在这个小小的空间里头，要装满那么多电子元器件，那很难。而且要求却提高了，要求能满足上千公里远距离的信号传输，而之前最远就是几公里  
+
+屋里空调都没有  
+
+政治干扰很厉害，孙家栋因为出身问题靠边站，也是秘密地干  
+
+只要有机会出力，就没有人会拒绝。音乐系统负责人，说不适合保密工作，不能进保密车间。就在门口坐着，有什么问题过来问他，他跟人家说，忍辱负重。  
+
+发射前又出了两个问题  
+
+酒泉发射基地发生的这一切，很多参与“东方红一号”卫星研制工作的人，当时并不知情。他们有的在北京，有的在外地干校劳动。很多人是通过电台广播，得知发生成功的消息的。  
+
+“后来听到音乐以后，大家高兴得从床上跳下来，马上跑出去冲出去，就是欢呼了，一直弄得很晚很晚，弄得大家那个晚上基本上没有睡觉。”  
+
+“太兴奋了，太兴奋了，中国的卫星，太兴奋了”  
+
+“我们中国人，有志气，有能力，确实是不容易的”  
+
+“非常激动，作为我自己来说，好像自己从小的愿望实现了，非常激动”  
+
+“这一生没有白过，还是做了点事，而且是做成功了”  
+
+“那个激动的那个心情，确实没办法说，你可以想象，那个时候中国那个条件，能把第一颗卫星在那个年代，把它弄到天上去，确实是，一个螺丝钉都是中国自己搞的，真是感觉到扬眉吐气。”  
+
+“他说你们航天搞了这么大的成绩，都靠什么力量来完成的，我们有个很光荣的目标，带领我们去奋斗”  
+
+“一个人什么都不爱，不可能牺牲自己”  
+
+
+
+
+
