--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -6,10 +6,24 @@
 一次整理，终生受用  
 
 
-
 ### 王辰院士  
 《开讲啦》  
 不看新闻  
+
+
+
+### 金怡濂院士  
+
+“20世纪80年代，国内急需高性能计算机，不得不花巨资从国外进口一台大型计算机。没想到，在进口机器的同时，还捎带进来两个监工。双方签订的协议上明确规定，开机、关机必须由外方监工负责操作，我方不得接触机仓内的核心部件……”金怡濂说，这件事让他感到一种切肤之痛，让他彻底明白了一个道理：真正的高科技，买不来。中国一定要加速发展巨型机，否则将永远受制于人！  
+
+要突破，必须有胆识。此时的金怡镰大胆提出，我国巨型计算机研制必须打破“土生土长”模式，走国际化的技术路线，发展基于国际通用处理芯片的大规模并行计算机。沿着这一技术思路，我国巨型计算机研制技术进入与国际同步发展的时代。  
+
+“我深深感到，科技工作者只有把自己的事业和祖国的繁荣、民族的昌盛紧密联系起来，才能大有作为。”获得2002年度国家最高科学技术奖后，金怡濂感慨道。  
+
+他坚信“生命在于做事”，即便步入晚年，他依旧奔波在国产高性能计算机和处理器研制的第一线，为学生和晚辈的技术决策把关定向。  
+
+他始终在为计算机领域自主创新呼吁呐喊：“尤其重要的是，应当强调自主创新，在此基础上加快国际合作。要牢记核心技术是花钱也买不来的。”  
+
 
 
 ### 杨振宁  
@@ -164,7 +178,8 @@
 4. 王选院士：最后的 1941 天里，有 798 天住院或治疗，医生说活不过两年，他坚持了五年多，一好转就投入到工作中。
 5. 林俊德院士：“我不能躺下，一躺就起不来了”
 6. 陈清如院士：如果癌细胞还没有扩散，就尽快手术；如果已经扩散，就立即出院，我还有很多工作要做。
-7. 
+7. 金怡濂院士：他坚信“生命在于做事”。  
+8. 
 
 
 起因说来话长，从小看到的书和文章，除了课本上的以外，看到的都是日本夏令营、德国油包纸之类的故事，不知道为什么有这么多这样的故事，都是说我们国家是一个落后的国家，我们是一个素质低的民族。  
