--- a/pytorch/ch3/院士.md
+++ b/pytorch/ch3/院士.md
@@ -13,7 +13,7 @@
 
 
 ### 金怡濂院士  
-
+《知领》公众号  
 “20世纪80年代，国内急需高性能计算机，不得不花巨资从国外进口一台大型计算机。没想到，在进口机器的同时，还捎带进来两个监工。双方签订的协议上明确规定，开机、关机必须由外方监工负责操作，我方不得接触机仓内的核心部件……”金怡濂说，这件事让他感到一种切肤之痛，让他彻底明白了一个道理：真正的高科技，买不来。中国一定要加速发展巨型机，否则将永远受制于人！  
 
 要突破，必须有胆识。此时的金怡镰大胆提出，我国巨型计算机研制必须打破“土生土长”模式，走国际化的技术路线，发展基于国际通用处理芯片的大规模并行计算机。沿着这一技术思路，我国巨型计算机研制技术进入与国际同步发展的时代。  
