--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -2,13 +2,13 @@
 
 ## 通用学习方法
 1. 主动阅读是最好的学习方法，经常想一些问题，带着问题读。
-2. 大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系。
+2. 大胆放开了写，先按自己想的写，想什么样就怎么写，写得多么差都没有关系。把牛客网正确率降到 10%  
 3. 犯错才是学习的核心。犯错是最好，错了才知道要 search 什么，可以深化薄弱的部分，会触发主动阅读，主动阅读是最好的学习方法。由于人越渴，喝到水时，乐趣就越大。——但丁《神曲》
 4. 几分钟写一个小 demo，想一想自己想实现什么功能  
-先看一遍书自己回想着写写，然后再自己扩展发挥创造  
+先看一遍书自己回想着写写，想的时候按图形位置去想，然后再自己扩展发挥创造  
 徐舜寿同志觉得这个队伍，不能光靠学习来培养，必须从实践当中锻炼。  
 4. 整理《如何阅读一本书》
-5. 遇到不懂的，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session 
+5. 遇到不懂的，被困惑，遇到 bug 是非常好的事情。会触发主动阅读，会对这一部分内容理解更深刻；cookie 和 session 
 6. 资源有限的时候，先重点突破，“两弹一星”、王大珩院士 863 计划。先写出程序来，不要每门课都从第一节开始看
 7. 记图形比记逻辑更容易；记在书上的位置，ORM API；
 8. 
@@ -17,7 +17,7 @@
 
 ## 编程学习方法
 1. 读源码
-2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”先上天再说
+2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
 5. 吃透一本权威的书，深入学习。有根基，有立身之本。重要的是质，而非量
@@ -33,5 +33,5 @@
 
 
 ## 案例  
-1. 主动阅读，看一遍自己想着写一写。学会了爬虫；学会了前后端；学会了算法  
+1. 主动阅读，看一遍自己想着写一写。学会了爬虫；学会了前后端；学会了算法，Fibonacci、翻转链表    
 2.  
