--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -34,7 +34,7 @@
 
 
 ## 案例  
-1. 主动阅读，看一遍自己想着写一写。学会了爬虫；学会了前后端；学会了算法，Fibonacci、翻转链表    
+1. 主动阅读，看一遍自己想着写一写。学会了爬虫；学会了前后端；学会了算法，Fibonacci、翻转链表，翻转链表写了 12 遍也没记住，新的方法一遍就记住了，效率提高了 20 倍以上      
 2.  
 
 
