--- a/pytorch/ch3/做事方法.md
+++ b/pytorch/ch3/做事方法.md
@@ -41,12 +41,13 @@
 1. 合并，跑步听书，一年多读 50 本经典
 2. 20 分钟的视频，每 5 分钟是一个目标；把 20 分钟当做一个整体，非常辛苦，分成 5 分钟一段，就非常轻松；  
 3. 集中优势兵力，半个小时就读完了《红星照耀中国》，之前半个月没看几页
-4. 
+4. 因为每天看，所以找到了主动阅读的方法，效率提高了 20 倍以上  
+5. 
 
 
 ### 生活相关  
 1. 锻炼身体，跑步，以任辉启院士为榜样，五十年每天六公里
-2. 跑步，4 步一个目标  
+2. 跑步，2 步一呼吸，4 步一个目标  
 3. 午休 20 分钟就够了，睡多了是有害的，不要矫情，想想林俊德院士    
 4. 
 
