--- a/pytorch/ch3/学习方法.md
+++ b/pytorch/ch3/学习方法.md
@@ -16,15 +16,13 @@
 
 
 ## 编程学习方法
-1. 
+1. 算法学习方法：先看一遍，再自己想着写一遍，错了改正，再自己写一遍  
 2. 先做出项目来，再深究细节。避免“深入学习综合征”；“东方红一号”项目都拿下来，先上天再说
 3. 看视频，快速入门，搭建骨架，不需要了解细节，就是有一幅地图就可以；速度最快，比读书快 10 倍
 4. 写程序，写小 Demo，只看健身视频练不出肌肉。解决问题，几分钟就能写出一个来。
-5. 
+5. 吃饭看算法
 6. 
-7. 算法学习方法：先照着写一遍，再自己想着写一遍，再照着写一遍，再想着写一遍，再照着写一遍  
-8. 吃饭看算法
-9. 
+7. 
 
 
 ### 小 tricks
@@ -42,3 +40,4 @@
 1. 读源码
 2. 吃透一本权威的书，深入学习。有根基，有立身之本。重要的是质，而非量
 3. 数据、操作、返回，回答了这些问题，就能弄明白一个程序，就会自己写程序
+4. 
